Dark mode root colour fix

--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -5,7 +5,7 @@
 /* typography root */
 :root {
 	--gray-100: #f8f9fa;
-	--gray-200: #ededed;
+	--gray-200: #fefefe;
 	--body-background: #23272D;
 	--body-font-color: #444;
 	--color-link: #06c;
@@ -28,7 +28,7 @@
     :root {
 			--gray-100: rgba(255, 255, 255, 0.1);
 			--gray-200: rgba(255, 255, 255, 0.2);
-			--body-background: #363636;
+			--body-background: #23272D;
 			--body-font-color: #e9ecef;
 			--color-link: #84b2ff;
 			--color-visited-link: #b88dff;
